Added section for Multi-Particle Systems, Atoms, Solids

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -844,6 +844,7 @@ and are in z-axis basis given by the \textbf{non-hermitian} matrices
                                        \end{bmatrix}
 \end{align*}
 
+\section{Multi-Particle Systems, Atoms, Solids}
 \subsection{Two-Particle Systems}
 \subsubsection{Properties Two-Particle Systems}
 Again, we assume that $V$ is time-independent.
@@ -1078,7 +1079,6 @@ to achieve a stable chemical bond.
 \ptitle{Pauli Exclusion Principle}
 
 One cannot have two electrons in exactly the same state (same quantum numbers) and still have the system antisymmetric w.r.t.\ exchange because one then has $\psi_{-}=0$ i.e.\ there is no such state (Choose $\psi_{-}$ because electrons are fermions).
-
 
 
 
