starting with week11: atoms

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -1080,6 +1080,10 @@ to achieve a stable chemical bond.
 
 One cannot have two electrons in exactly the same state (same quantum numbers) and still have the system antisymmetric w.r.t.\ exchange because one then has $\psi_{-}=0$ i.e.\ there is no such state (Choose $\psi_{-}$ because electrons are fermions).
 
+\subsection{Atoms}
+\subsubsection{}
+\subsubsection{}
+\subsubsection{}
 
 
 
