--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -1081,9 +1081,37 @@ to achieve a stable chemical bond.
 One cannot have two electrons in exactly the same state (same quantum numbers) and still have the system antisymmetric w.r.t.\ exchange because one then has $\psi_{-}=0$ i.e.\ there is no such state (Choose $\psi_{-}$ because electrons are fermions).
 
 \subsection{Atoms}
-\subsubsection{}
-\subsubsection{}
-\subsubsection{}
+\subsubsection{Hydrogen Orbitals}
+\paragraph{Orbital Description by Quantum Numbers}
+\ptitle{Nomenclature Table}
+
+\paragraph{Orbital Table}
+
+
+\subsubsection{Filling Orbitals with Electrons}
+\paragraph{Hydrogenic (One-Electron) States}
+\paragraph{Multielectron Atoms}
+
+\subsubsection{Full State Description of Atoms}
+Non-full subshells have freedom in how to fill their orbitals with electrons. Therefore, one needs to establish a method to describe these states.
+\paragraph{Angular Momentum in Multiparticle Systems}
+\paragraph{Total Momentum Quantum Numbers}
+
+\ptitle{Golden Rules}
+
+\ptitle{Addition Rule}
+
+Describe partially filled subshells.
+
+\ptitle{Term Symbol}
+
+\ptitle{Excange Symmetry}
+
+\ptitle{Hund's Rules for Finding Ground States}
+
+
+
+
 
 
 
