--- a/src/main.tex
+++ b/src/main.tex
@@ -11,14 +11,14 @@
 \begin{multicols*}{3}
     
     % create the title section
-    %\input{\templatePath/summary_title.tex} % ChkTex 27
-    %\input{sections/01_Introduction.tex}
+    \input{\templatePath/summary_title.tex} % ChkTex 27
+    \input{sections/01_Introduction.tex}
     \input{sections/02_Schroedinger_Equation.tex}
-    %\input{sections/03_Formalism.tex}
+    \input{sections/03_Formalism.tex}
     \newpage
-    %\input{sections/Appendix.tex}
+    \input{sections/Appendix.tex}
     \newpage
-    %\input{sections/midterm.tex}
+    \input{sections/midterm.tex}
     
 \end{multicols*}
 \end{document}
